💝DARK-DEVIL-BOTZ🧜‍♂️

--- a/app.json
+++ b/app.json
@@ -94,10 +94,7 @@
     "buildpacks": [{
         "url": "heroku/python"
     }],
-    "formation": {
-        "worker": {
-            "quantity": 1,
-            "size": "free"
-        }
+    "stack": "heroku-22"
     }
+
 }
